--- a/index.html
+++ b/index.html
@@ -132,8 +132,8 @@
 <body>
     <div class="container">
         <header>
-            <h1 class="zh">赫兹网络</h1>
-            <h1 class="small en">Hertz Global Network</h1>
+            <h1 class="zh">赫兹网络 | AS135395 | AS4242421353</h1>
+            <h1 class="small en">Hertz Global Network | AS135395 | AS4242421353</h1>
         </header>
 
         <section>
