--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <meta charset="utf-8">
+    <meta name="robots" content="noindex, nofollow">
     <title>Index | Hertz Global Network</title>
     <style>
         html {
@@ -132,12 +133,12 @@
 <body>
     <div class="container">
         <header>
-            <h1 class="zh">赫兹网络 | AS135395 | AS4242421353</h1>
-            <h1 class="small en">Hertz Global Network | AS135395 | AS4242421353</h1>
+            <h1 class="zh">赫兹网络</h1>
+            <h1 class="small en">Hertz Global Network</h1>
         </header>
 
         <section>
-            <h2 class="zh">介绍 | <span class="en">Introduction</span></h2>
+            <h2 class="zh">关于 | <span class="en">About</span></h2>
             <div class="section-content zh">
                 <p>Player 个人网络。</p>
             </div>
@@ -150,13 +151,13 @@
         <section>
             <h2 class="zh">认证 | <span class="en">Validation</span></h2>
             <div class="section-content zh">
-                <p>本域名由 AWS Route 53 托管 Gandi 实际控制，域名 Whois 实际对应邮箱为 hz@hertz.zone。</p>
+                <p>本域名由 AWS Route 53 的合作伙伴 Gandi 实际控制，域名 Whois 实际对应邮箱为 hz@hertz.zone。</p>
                 <p>Email：hz@hertz.zone | GPG Key：0A3A F3F9 6762 BA38 4C50  CE68 32D7 8EE3 946D 19EB</p>
                 <p>hertz.zone 是由 Hertz 所有的域名，由任意此域名邮箱（即 *@hertz.zone）发出的邮件只要经过适当验证（如DKIM），就可认为是有 Hertz 发出的操作指令。</p>
             </div>
             <hr />
             <div class="section-content en">
-                <p>This domain is actually controlled by Gandi, which is a registrar associate of AWS Route 53. The actual email address of this domain is hz@hertz.zone</p>
+                <p>This domain is actually controlled by Gandi, a registrar associate of AWS Route 53. The actual email address of this domain is hz@hertz.zone</p>
                 <p>Email：hz@hertz.zone | GPG Key：0A3A F3F9 6762 BA38 4C50  CE68 32D7 8EE3 946D 19EB</p>
                 <p>hertz.zone is owned by Hertz, and as long as an email from any address under the domain (*@hertz.zone) can be validated properly (like DKIM), the email can be supposed in the name of Hertz.</p>
             </div>
