--- a/index.html
+++ b/index.html
@@ -163,6 +163,7 @@
             </div>
         </section>
     </div>
+    <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "466dc2bbe4724e23a989d8c7f4044e51"}'></script>
 </body>
 
 </html>
