--- a/index.html
+++ b/index.html
@@ -133,8 +133,8 @@
 <body>
     <div class="container">
         <header>
-            <h1 class="zh">赫兹网络</h1>
-            <h1 class="small en">Hertz Global Network</h1>
+            <h1 class="zh">赫兹网络 / AS135395 / AS4242421353</h1>
+            <h1 class="small en">Hertz Global Network / AS135395 / AS4242421353</h1>
         </header>
 
         <section>
@@ -152,14 +152,27 @@
             <h2 class="zh">认证 | <span class="en">Validation</span></h2>
             <div class="section-content zh">
                 <p>本域名由 AWS Route 53 的合作伙伴 Gandi 实际控制，域名 Whois 实际对应邮箱为 hz@hertz.zone。</p>
-                <p>Email：hz@hertz.zone | GPG Key：0A3A F3F9 6762 BA38 4C50  CE68 32D7 8EE3 946D 19EB</p>
+                <p>Email：hz@hertz.zone | GPG Key：00A3AF3F96762BA384C50CE6832D78EE3946D19EB</p>
                 <p>hertz.zone 是由 Hertz 所有的域名，由任意此域名邮箱（即 *@hertz.zone）发出的邮件只要经过适当验证（如DKIM），就可认为是有 Hertz 发出的操作指令。</p>
             </div>
             <hr />
             <div class="section-content en">
                 <p>This domain is actually controlled by Gandi, a registrar associate of AWS Route 53. The actual email address of this domain is hz@hertz.zone</p>
-                <p>Email：hz@hertz.zone | GPG Key：0A3A F3F9 6762 BA38 4C50  CE68 32D7 8EE3 946D 19EB</p>
+                <p>Email: hz@hertz.zone | GPG Key: 0A3AF3F96762BA384C50CE6832D78EE3946D19EB</p>
                 <p>hertz.zone is owned by Hertz, and as long as an email from any address under the domain (*@hertz.zone) can be validated properly (like DKIM), the email can be supposed in the name of Hertz.</p>
+            </div>
+        </section>
+
+        <section>
+            <h2 class="zh">服务 | <span class="en">Service</span></h2>
+            <div class="section-content zh">
+                <p>AS135395 目前提供以下服务：</p>
+                <p>· [预计6月下旬可用] 免费 BGP 虚拟机：位于德国，必须接入 AS135395 BGP Session。</p>
+            </div>
+            <hr />
+            <div class="section-content en">
+                <p>AS135395 provides:</p>
+                <p>· [ETA: Late June] Free BGP VM: Located in Germany, must connect to AS135395.</p>
             </div>
         </section>
     </div>
