--- a/index.html
+++ b/index.html
@@ -167,16 +167,17 @@
             <h2 class="zh">服务 | <span class="en">Service</span></h2>
             <div class="section-content zh">
                 <p>AS135395 目前提供以下服务：</p>
-                <p>· [预计6月下旬可用] 免费 BGP 虚拟机：位于德国，必须接入 AS135395 BGP Session。</p>
+                <p>· [已发布-内测阶段] 免费 BGP 虚拟机：位于德国，主要上游 HE，必须接入 AS135395 BGP Session。</p>
+                <p>· [预计6月下旬可用] 免费 BGP Tunnel：位于德国，主要上游 HE，仅支持 WireGuard。</p>
             </div>
             <hr />
             <div class="section-content en">
                 <p>AS135395 provides:</p>
-                <p>· [ETA: Late June] Free BGP VM: Located in Germany, must connect to AS135395.</p>
+                <p>· [Released-Alpha] Free BGP VM: Located in Germany, main upstream is HE, must connect to AS135395.</p>
+                <p>· [ETA: Late June] Free BGP Tunnel: Located in Germany, main upstream is HE, WireGuard only.</p>
             </div>
         </section>
     </div>
-    <script defer src='https://static.cloudflareinsights.com/beacon.min.js' data-cf-beacon='{"token": "466dc2bbe4724e23a989d8c7f4044e51"}'></script>
 </body>
 
 </html>
