--- a/index.html
+++ b/index.html
@@ -167,14 +167,14 @@
             <h2 class="zh">服务 | <span class="en">Service</span></h2>
             <div class="section-content zh">
                 <p>AS135395 目前提供以下服务：</p>
-                <p>· [已发布-内测阶段] 免费 BGP 虚拟机：位于德国，主要上游 HE，必须接入 AS135395 BGP Session。</p>
-                <p>· [预计6月下旬可用] 免费 BGP Tunnel：位于德国，主要上游 HE，仅支持 WireGuard。</p>
+                <p>· [已发布-内测阶段] 免费 BGP 虚拟机：位于德国，主要上游 HE。</p>
+                <p>· [预计7月下旬可用] 免费 BGP Tunnel：位于德国，主要上游 HE，仅支持 WireGuard。</p>
             </div>
             <hr />
             <div class="section-content en">
                 <p>AS135395 provides:</p>
-                <p>· [Released-Alpha] Free BGP VM: Located in Germany, main upstream is HE, must connect to AS135395.</p>
-                <p>· [ETA: Late June] Free BGP Tunnel: Located in Germany, main upstream is HE, WireGuard only.</p>
+                <p>· [Released-Alpha] Free BGP VM: Located in Germany, main upstream is HE.</p>
+                <p>· [ETA: Late July] Free BGP Tunnel: Located in Germany, main upstream is HE, WireGuard only.</p>
             </div>
         </section>
     </div>
