--- a/index.html
+++ b/index.html
@@ -167,14 +167,16 @@
             <h2 class="zh">服务 | <span class="en">Service</span></h2>
             <div class="section-content zh">
                 <p>AS135395 目前提供以下服务：</p>
-                <p>· [已发布-公测阶段] 免费 BGP 虚拟机：位于德国，主要上游 HE。</p>
-                <p>· [已发布-公测阶段] 免费 BGP Tunnel：位于德国，主要上游 HE，仅支持 WireGuard。</p>
+                <p>· [已发布] 免费 BGP 虚拟机：位于德国，主要上游 HE。</p>
+                <p>· [已发布] 免费 BGP Tunnel：位于德国，主要上游 HE，仅支持 WireGuard。</p>
+                <p>· [已发布] AS Parking：BGPless BGP。</p>
             </div>
             <hr />
             <div class="section-content en">
                 <p>AS135395 provides:</p>
-                <p>· [Released-Beta] Free BGP VM: Located in Germany, main upstream: HE.</p>
-                <p>· [Released-Beta] Free BGP Tunnel: Located in Germany, main upstream: HE, WireGuard only.</p>
+                <p>· [Released] Free BGP VM: Located in Germany, main upstream: HE.</p>
+                <p>· [Released] Free BGP Tunnel: Located in Germany, main upstream: HE, WireGuard only.</p>
+                <p>· [Released] AS Parking: BGPless BGP</p>
             </div>
         </section>
 
