--- a/index.html
+++ b/index.html
@@ -164,12 +164,13 @@
         </section>
 
         <section>
-            <h2 class="zh">服务 | <span class="en">Service</span></h2>
+            <h2 class="zh">服务 | <span class="en">Services</span></h2>
             <div class="section-content zh">
                 <p>AS135395 目前提供以下服务：</p>
                 <p>· [已发布] 免费 BGP 虚拟机：位于德国，主要上游 HE。</p>
                 <p>· [已发布] 免费 BGP Tunnel：位于德国，主要上游 HE，仅支持 WireGuard。</p>
                 <p>· [已发布] AS Parking：BGPless BGP。</p>
+                <p>· [预计7月下旬发布] HZIX</p>
             </div>
             <hr />
             <div class="section-content en">
@@ -177,6 +178,18 @@
                 <p>· [Released] Free BGP VM: Located in Germany, main upstream: HE.</p>
                 <p>· [Released] Free BGP Tunnel: Located in Germany, main upstream: HE, WireGuard only.</p>
                 <p>· [Released] AS Parking: BGPless BGP</p>
+                <p>· [ETA-Late July] HZIX</p>
+            </div>
+        </section>
+
+        <section>
+            <h2 class="zh">支持 | <span class="en">Support</span></h2>
+            <div class="section-content zh">
+                <p>你可以在我们的<a href="https://support.hertz.zone">工单系统</a>中提交工单。</p>
+            </div>
+            <hr />
+            <div class="section-content en">
+                <p>Submit your requests on our <a href="https://support.hertz.zone">ticket system</a>.</p>
             </div>
         </section>
 
@@ -190,7 +203,15 @@
                 <p>English Only: <a href="https://wiki.hertz.zone">Click</a></p>
             </div>
         </section>
+
+        <section>
+            <h2 class="zh">客户 | <span class="en">Customers</span></h2>
+            <div class="section-content en">
+                <p><a href="https://bgp.tools/as/135395#connectivity" target="_blank">BGP.Tools</a></p>
+            </div>
+        </section>
     </div>
+</div>
 </body>
 
 </html>
