--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 <p>· [已发布] 免费 BGP 虚拟机：位于德国，主要上游 HE。</p>
                 <p>· [已发布] 免费 BGP Tunnel：位于德国，主要上游 HE，仅支持 WireGuard。</p>
                 <p>· [已发布] AS Parking：BGPless BGP。</p>
-                <p>· [预计7月下旬发布] HZIX</p>
+                <p>· [已发布] HZIX</p>
             </div>
             <hr />
             <div class="section-content en">
@@ -178,7 +178,7 @@
                 <p>· [Released] Free BGP VM: Located in Germany, main upstream: HE.</p>
                 <p>· [Released] Free BGP Tunnel: Located in Germany, main upstream: HE, WireGuard only.</p>
                 <p>· [Released] AS Parking: BGPless BGP</p>
-                <p>· [ETA-Late July] HZIX</p>
+                <p>· [Released] HZIX</p>
             </div>
         </section>
 
