--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
         <section>
             <h2 class="zh">关于 | <span class="en">About</span></h2>
             <div class="section-content zh">
-                <p>Player 个人网络。</p>
+                <p>Player 个人网络。<a href="https://blog.hertz.zone">博客地址</a></p>
             </div>
             <hr />
             <div class="section-content en">
