--- a/index.html
+++ b/index.html
@@ -165,6 +165,7 @@
         <section>
             <h2 class="zh">服务 | <span class="en">Services</span></h2>
             <div class="section-content zh">
+                <p>要获取以下服务，请点击下面的 Wiki 链接。</p>
                 <p>AS135395 目前提供以下服务：</p>
                 <p>· [已发布] 免费 BGP 虚拟机：位于德国，主要上游 HE。</p>
                 <p>· [已发布] 免费 BGP Tunnel：位于德国，主要上游 HE，仅支持 WireGuard。</p>
@@ -173,6 +174,7 @@
             </div>
             <hr />
             <div class="section-content en">
+                <p>To get the service, please go to the wiki below.</p>
                 <p>AS135395 provides:</p>
                 <p>· [Released] Free BGP VM: Located in Germany, main upstream: HE.</p>
                 <p>· [Released] Free BGP Tunnel: Located in Germany, main upstream: HE, WireGuard only.</p>
