--- a/index.html
+++ b/index.html
@@ -134,6 +134,7 @@
         <header>
             <h1 class="zh">赫兹网络 / AS135395 / AS4242421353</h1>
             <h1 class="small en">Hertz Global Network / AS135395 / AS4242421353</h1>
+            <h1 class="small en">Hertz Technology Ltd</h1>
         </header>
 
         <section>
