--- a/index.html
+++ b/index.html
@@ -169,8 +169,7 @@
                 <p>AS135395 目前提供以下服务：</p>
                 <p>· [已发布] 免费 BGP 虚拟机：位于德国，主要上游 HE。</p>
                 <p>· [已发布] 免费 BGP Tunnel：位于德国，主要上游 HE，仅支持 WireGuard。</p>
-                <p>· [已发布] AS Parking：BGPless BGP。</p>
-                <p>· [已发布] HZIX</p>
+                <p>· [内测中] 免费 BGP 虚拟机：位于香港，即将支持 BGP。</p>
             </div>
             <hr />
             <div class="section-content en">
@@ -178,8 +177,7 @@
                 <p>AS135395 provides:</p>
                 <p>· [Released] Free BGP VM: Located in Germany, main upstream: HE.</p>
                 <p>· [Released] Free BGP Tunnel: Located in Germany, main upstream: HE, WireGuard only.</p>
-                <p>· [Released] AS Parking: BGPless BGP</p>
-                <p>· [Released] HZIX</p>
+                <p>· [Alpha] Free BGP VM: Located in Hong Kong, BGP unsupported yet but soon.</p>
             </div>
         </section>
 
